--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,13 +9,16 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.Notifications">
-        <activity android:name=".SimpleNotificationExample80.MainActivity_80"></activity>
-        <activity android:name=".MainActivity">
+        <activity android:name=".Tapaction82.MainActivity_82"></activity>
+        <activity android:name=".SimpleNotificationExample81.MainActivity_80">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
+        </activity>
+        <activity android:name=".MainActivity">
+
         </activity>
     </application>
 
