--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,7 +9,9 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.Notifications">
-        <activity android:name=".Tapaction82.MainActivity_82"></activity>
+        <activity android:name=".ActionButtons83.SettingsActivity"></activity>
+        <activity android:name=".ActionButtons83.DetailsActivity" />
+        <activity android:name=".Tapaction82.MainActivity_82" />
         <activity android:name=".SimpleNotificationExample81.MainActivity_80">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -17,9 +19,7 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".MainActivity">
-
-        </activity>
+        <activity android:name=".MainActivity" />
     </application>
 
 </manifest>
